# spectator

./: .gitignore  .travis.yml  200.html  CMakeLists.txt  LICENSE  README.md  Roadmap.md  asdasd  com.github.treagod.spectator.yml  index.html  meson.build
.github/: FUNDING.yml
_nuxt/: 0e0cb72.js  15ecbef.js  16038a6.js  193a1c8.js  1e197ea.js  2d37822.js  2ffce05.js  34e215a.js  3bf0bf4.js  3e6744d.js  57e9fa0.js  6348947.js  971557b.js  c1f175d.js  ceb252d.js  d3cf4df.js  d503954.js
_nuxt/content/: db-53eab147.json
_nuxt/static/1615196590/: manifest.js
data/: CMakeLists.txt  assets.gresource.xml  com.github.treagod.httpinspector.appdata.xml  com.github.treagod.httpinspector.desktop  com.github.treagod.httpinspector.gschema.xml  com.github.treagod.spectator.appdata.xml.in  com.github.treagod.spectator.desktop.in  com.github.treagod.spectator.gschema.xml  meson.build  stylesheet.css
debian/: changelog  control  copyright  rules
docs/: 404.html  README.md  _coverpage.md  _navbar.md  contribute.md  index.html  nuxt.config.js  package-lock.json  package.json  scripting.md  tsconfig.json
docs/.github/workflows/: ci.yml
docs/assets/css/: 0.styles.0b2e2d90.css  0.styles.0fa35ecc.css
docs/assets/js/: 10.012a6cbb.js  10.4af1eb16.js  11.a0cf44aa.js  11.bc34118d.js  12.197ba9b3.js  12.d6ef28a5.js  2.2068760f.js  2.b62b5b14.js  3.f47a6b98.js  3.f7e1bac0.js  4.c60c8244.js  5.34931f6b.js  5.725b2ebd.js  6.315c4c1c.js  6.ae6edf96.js  7.39384022.js  7.86d363ef.js  (+7 more)
docs/components/: Base.vue  Footer.vue  Navbar.vue
docs/de/: README.md  _navbar.md  contribute.md  overview.md  scripting.md
docs/docs/: 200.html  index.html
docs/environment/: index.html
docs/get-started/: index.html  installation.html  using.html
docs/getting-started/: index.html
docs/layouts/: default.vue  error.vue  landing.vue
docs/pages/: index.vue  news.vue
docs/plugins/: vue-splide.js
docs/scripting/: console.html  helper.html  http.html  index.html  request.html  response.html
docs/static/: sitemap.xml
envs/: Screenshot from 2021-03-07 10.05.02.png-autosave.kra
flatpak/: com.github.treagod.spectator.json
news/: index.html
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.treagod.httpinspector.pot  com.github.treagod.spectator.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+157 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+156 more)
scripting/: scripting_view.png-autosave.kra
src/: Application.vala  CMakeLists.txt  Main.vala  ServicesDummy.vala  Window.vala  config.vala  config.vala.cmake  config.vala.in  meson.build
src/Controllers/: Collection.vala  History.vala  Main.vala  MainController.vala  ReqController.vala  Request.vala  RequestController.vala  Sidebar.vala  meson.build
src/Dialogs/: Alert.vala  Environments.vala  Preferences.vala  meson.build
src/Dialogs/Collection/: CreateCollection.vala  UpdateCollection.vala
src/Dialogs/Environment/: EnvironmentVariables.vala  NewEnvironment.vala  UpdateEnvironment.vala
src/Dialogs/Preference/: Editor.vala  General.vala  Network.vala
src/Dialogs/Request/: CreateDialog.vala  CreateDialogWithCollection.vala  Dialog.vala  UpdateDialog.vala
src/Duktape/: duktape.vapi
src/Helper/: RequestHeader.vala  Requester.vala
src/Models/: Collection.vala  Environment.vala  Header.vala  Method.vala  Order.vala  Pair.vala  Request.vala  RequestBody.vala  RequestItem.vala  ResponseItem.vala  Script.vala  Variable.vala  meson.build
src/Plugins/: Engine.vala  LuaPlugin.vala  Plugin.vala  Utils.vala
src/Repository/: ICollection.vala  ICustomOrder.vala  IEnvironment.vala  IRequest.vala  InMemoryEnvironment.vala  SQLiteCollection.vala  SQLiteCustomOrder.vala  SQLiteEnvironment.vala  SQLiteRequest.vala  SQLiteRequestUpdater.vala  meson.build
src/Services/: JsonDeserializer.vala  JsonSerializer.vala  RequestAction.vala  ScriptContext.vala  ScriptRunner.vala  ScriptWriter.vala  SendingService.vala  Settings.vala  UrlAttributeEngine.vala  Utilities.vala  VariableResolver.vala  WindowBuilder.vala  meson.build
src/Services/Scripting/: Console.vala  Helper.vala  Http.vala
src/Stores/: RequestStore.vala
src/Views/: RequestView.vala
src/Widgets/: AbstractTypeView.vala  Content.vala  HeaderBar.vala  HeaderField.vala  HeaderTab.vala  HeaderView.vala  HtmlView.vala  JsonView.vala  Preferences.vala  Request.vala  RequestDialog.vala  RequestHistory.vala  RequestHistoryItem.vala  RequestResponsePane.vala  RequestView.vala  ResponseStatusBar.vala  ResponseText.vala  ResponseView.vala  UrlEntry.vala  meson.build
src/Widgets/Request/: BodySourceView.vala  BodyView.vala  Container.vala  HeaderField.vala  HeaderProvider.vala  HeaderView.vala  Interface.vala  ItemProvider.vala  KeyValueField.vala  KeyValueList.vala  Popover.vala  ScriptingView.vala  UrlEntry.vala
src/Widgets/Request/Scripting/: Container.vala  SourceView.vala
src/Widgets/Response/: AbstractTypeView.vala  Container.vala  DefaultView.vala  HeaderList.vala  HtmlView.vala  JsonTreeView.vala  JsonView.vala  ModeButton.vala  ModeDropdown.vala  SourceView.vala  XmlTreeView.vala  XmlView.vala
src/Widgets/Response/StatusBar/: Container.vala
src/Widgets/Sidebar/: Container.vala  Item.vala
src/Widgets/Sidebar/Collection/: Container.vala  Dropdown.vala
src/Widgets/Sidebar/History/: Container.vala
src/duktape/: duktape.vapi
src/sql/: init.sql  init_sql.vala.in  meson.build
src/sql/custom_order/: move_request_after_request.sql
src/sql/migrate_0.6.0/: create_environment_table.sql  create_variable_table.sql  drop_environment_table.sql  drop_variable_table.sql
vapi/: libcur4.namespace  libcurl4.files  libcurl4.gi  libcurl4.metadata  libcurl4.vapi
(+55 files in other folders)
