sources += files(
	'Request/Dialog.vala',
	'Request/CreateDialog.vala',
	'Request/CreateDialogWithCollection.vala',
	'Request/UpdateDialog.vala',
	'Collection/CreateCollection.vala',
	'Collection/UpdateCollection.vala',
	'Alert.vala',
	'Environments.vala',
	'Environment/NewEnvironment.vala',
	'Environment/EnvironmentVariables.vala',
	'Preferences.vala',
	'Preference/General.vala',
	'Preference/Network.vala',
	'Preference/Editor.vala'
)
