sources += files(
	'Utilities.vala',
    'ScriptWriter.vala',
	'Settings.vala',
	'JsonSerializer.vala',
	'JsonDeserializer.vala',
    'ScriptContext.vala',
    'ScriptRunner.vala',
	'RequestAction.vala',
    'SendingService.vala',
    'Scripting/Http.vala',
    'Scripting/Console.vala',
    'Scripting/Helper.vala',
)
