sources += files(
	'Utilities.vala',
    'ScriptWriter.vala',
    'VariableResolver.vala',
    'WindowBuilder.vala',
	'Settings.vala',
	'JsonSerializer.vala',
	'JsonDeserializer.vala',
    'ScriptContext.vala',
    'ScriptRunner.vala',
    'UrlAttributeEngine.vala',
	'RequestAction.vala',
    'SendingService.vala',
    'Scripting/Http.vala',
    'Scripting/Console.vala',
    'Scripting/Helper.vala',
)
