sources += files(
    'Content.vala',
    'HeaderBar.vala',
    'Sidebar/Container.vala',
    'Sidebar/Item.vala',
    'Sidebar/History/Container.vala',
    'Sidebar/Collection/Container.vala',
    'Sidebar/Collection/Dropdown.vala',
    'RequestResponsePane.vala',
    'Response/SourceView.vala',
    'Response/Container.vala',
    'Response/AbstractTypeView.vala',
    'Response/HtmlView.vala',
    'Response/DefaultView.vala',
    'Response/XmlView.vala',
    'Response/XmlTreeView.vala',
    'Response/JsonView.vala',
    'Response/JsonTreeView.vala',
    'Response/HeaderList.vala',
    'Response/StatusBar/Container.vala',
    'Request/Container.vala',
    'Request/UrlEntry.vala',
    'Request/HeaderField.vala',
    'Request/BodyView.vala',
    'Request/Scripting/Container.vala',
    'Request/Scripting/SourceView.vala',
    'Request/BodySourceView.vala',
    'Request/KeyValueList.vala',
    'Request/KeyValueField.vala',
    'Request/Interface.vala',
    'Request/ItemProvider.vala',
    'Request/HeaderProvider.vala',
)
